# localizationkit

./: .gitignore  README.md  pyproject.toml  stylecheck.sh  test.sh
.azure/: azure-pipelines.yml
localizationkit/: __init__.py  configuration.py  exceptions.py  localization_types.py  utility_types.py
localizationkit/tests/: __init__.py  comment_linebreaks.py  comment_similarity.py  duplicate_keys.py  has_comments.py  has_value.py  invalid_tokens.py  key_length.py  objectivec_alternative_tokens.py  placeholder_token_explanation.py  swift_interpolation.py  test_case.py  token_matching.py  token_position_identifiers.py
tests/: config.toml  conftest.py  test_base_calls.py  test_comment_linebreaks.py  test_comment_similarity.py  test_duplicate_keys.py  test_has_comments.py  test_has_value.py  test_invalid_tokens.py  test_key_length.py  test_objectivec_alternative_tokens.py  test_placeholder_token_explanation.py  test_position_identifiers.py  test_simple.py  test_swift_interpolation.py  test_token_matching.py
