[tool.poetry]
name = "localizationkit"
version = "1.0.1"
description = "String localization tests"

license = "MIT"

authors = [
    "Dale Myers <dalemy@microsoft.com>"
]

readme = 'README.md'

repository = "https://github.com/Microsoft/localizationkit"
homepage = "https://github.com/Microsoft/localizationkit"

keywords = ['localization', 'strings', 'tests']

classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Topic :: Software Development',
    'Topic :: Software Development :: Testing',
    'Topic :: Utilities'
]

[tool.poetry.dependencies]
python = "^3.7.2"
toml = "^0.10.0"

[tool.poetry.dev-dependencies]
black = "=22.6.0"
mypy = "=0.971"
pylint = "=2.14.5"
pytest = "=7.1.2"
pytest-cov = "=3.0.0"
types-toml = "=0.10.8"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
