[tool.poetry]
name = "localizationkit"
version = "2.0.0"
description = "String localization tests"

license = "MIT"

authors = [
    "Dale Myers <dalemy@microsoft.com>"
]

readme = 'README.md'

repository = "https://github.com/Microsoft/localizationkit"
homepage = "https://github.com/Microsoft/localizationkit"

keywords = ['localization', 'strings', 'tests']

classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Topic :: Software Development',
    'Topic :: Software Development :: Testing',
    'Topic :: Utilities'
]

[tool.poetry.dependencies]
python = "^3.8"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
mypy = "^0.971"
pylint = "^2.17.5"
pytest = "^7.4.0"
pytest-cov = "^3.0.0"
types-toml = "^0.10.8.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
